# tablesplusplus

./: .eslintrc.cjs  .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  releasing.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  saved_queries.rs
src-tauri/src/ai/: mod.rs
src-tauri/src/commands/: ai.rs  connections.rs  export.rs  mod.rs  query.rs  saved_queries.rs  session.rs
src-tauri/src/config/: ai_settings.rs  mod.rs
src-tauri/src/db/: client.rs  mod.rs  mysql.rs  pool.rs  postgres.rs
src-tauri/src/secrets/: mod.rs
src-tauri/src/ssh/: mod.rs
src/components/: Wordmark.tsx
src/components/ui/: Badge.tsx  Button.tsx  Dialog.tsx  Input.tsx  Label.tsx  Select.tsx  ThemeToggle.tsx
src/features/ai/: AiSettingsDialog.tsx  prompts.ts  useAi.ts
src/features/cell/: CellDetailDialog.tsx
src/features/connections/: ConnectionForm.tsx  ConnectionHub.tsx  connectionDefaults.ts  connectionShare.ts  useConnections.ts
src/features/editor/: ResultView.tsx  SavedQueriesMenu.tsx  SqlConsole.tsx
src/features/export/: ExportMenu.tsx  exportActions.ts
src/features/grid/: CommitBar.tsx  DataGrid.tsx  GridCellView.tsx  cell.ts
src/features/history/: HistoryPanel.tsx
src/features/updates/: AppUpdater.tsx
src/features/workspace/: ConnectionSwitcher.tsx  DatabaseSwitcher.tsx  SchemaTree.tsx  TabBar.tsx  Workspace.tsx  hooks.ts  sql.ts
src/lib/: export.ts  ipc.ts  monaco.ts  types.ts
src/store/: useColumnWidthsStore.ts  useHistoryStore.ts  useThemeStore.ts  useWorkspaceStore.ts
src/styles/: globals.css
