[package]
name = "tablesplusplus"
version = "0.1.0"
description = "Tables++ — an ultra-fast, premium desktop database GUI client."
authors = ["Tables++ contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "tablesplusplus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
bytes = "1"
dashmap = "6"

# Secrets — OS-native keyring (CLAUDE.md §4.1).
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }

# PostgreSQL — async + pooled.
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
deadpool-postgres = "0.14"
postgres-native-tls = "0.5"
native-tls = "0.2"
rust_decimal = { version = "1", features = ["db-postgres"] }

# MySQL — async; uses mysql_async's built-in pool (docs/architecture.md §6.2).
mysql_async = "0.34"

# AI providers (Anthropic / OpenAI / OpenRouter) over HTTP. rustls keeps it self-contained.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[features]
# Default Tauri custom-protocol used in release builds.
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
