[package]
name = "tablesplusplus"
version = "0.2.0"
description = "Tables++ — an ultra-fast, premium desktop database GUI client."
authors = ["Tables++ contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "tablesplusplus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
bytes = "1"
dashmap = "6"
futures-util = "0.3"

# Secrets — OS-native keyring (CLAUDE.md §4.1).
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }

# PostgreSQL — async + pooled.
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
deadpool-postgres = "0.14"
postgres-native-tls = "0.5"
native-tls = "0.2"
rust_decimal = { version = "1", features = ["db-postgres"] }

# MySQL — async; uses mysql_async's built-in pool (docs/architecture.md §6.2).
mysql_async = "0.34"

# AI providers (Anthropic / OpenAI / OpenRouter) over HTTP. rustls keeps it self-contained.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Auto-update + relaunch (desktop).
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# Data export — native save dialog + clipboard + filesystem (dialog grants the picked path to
# the fs scope at runtime, so no arbitrary-write command is exposed to the webview).
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"

# SSH tunneling (optional per-connection local port forward). Pure-Rust, async.
russh = "0.45"
russh-keys = "0.45"

# Saved Queries — read-only view over query-mcp's snippet store (~/.query-mcp/store.db).
# Bundled so no system SQLite is assumed; small, and the only SQLite consumer in the app.
rusqlite = { version = "0.32", features = ["bundled"] }

[features]
# Default Tauri custom-protocol used in release builds.
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
